api/swim_form/src/tests/derive/form/unknown_container_attr.stderr
error: Unrecognized attribute for 'form'.
  --> src/tests/derive/form/unknown_container_attr.rs:20:12
   |
20 |     #[form(swim)]
   |            ^^^^
